packetmill section aligned

--- a/index.html
+++ b/index.html
@@ -130,8 +130,11 @@
           <div class="col-7 text-center  mb-5">
             <h2 class="section-title">What is PacketMill?</h2>
             <div class="col-lg text-left  mb-5">
-            <p class="lead">PacketMill is a system for optimizing software packet processing. It grinds the whole packet processing stack, from the high-level network function configuration file to the low-level userspace network drivers, to mitigate inefficiencies and produce a customized binary for a given network function. PacketMill is composed of three main components:</p>
-          </div>
+            <p class="lead">PacketMill is a system for optimizing software packet processing. It grinds the whole packet processing stack, from the high-level network function configuration file to the low-level userspace network drivers, to mitigate inefficiencies and produce a customized binary for a given network function.</p>
+            </div>
+            <div class="col-lg text-center  mb-5">
+            <p class="lead">PacketMill is composed of three main components:</p>
+            </div>
           </div>
         </div>
         <div class="row align-items-stretch">
