--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
           <div class="col-md-6 col-lg mb-4 mb-lg-4">
             <div class="h-entry">
               <!-- <img src="images/img_1.jpg" alt="Image" class="img-fluid"> -->
-              <h2><a href="#">PacketMill: Toward per-core 100-Gbps Networking</a></h2>
-              <div class="meta mb-4">ASPLOS'21<span class="mx-2">&bullet;</span> April 19-23, 2021<span class="mx-2"></span></div>
+              <h2><a href="docs/packetmill-asplos21-extended_abstract.pdf">PacketMill: Toward per-core 100-Gbps Networking</a></h2>
+              <div class="meta mb-4"><a href="https://asplos-conference.org/2021" target="_blank">ASPLOS'21</a><span class="mx-2">&bullet;</span> April 19-23, 2021<span class="mx-2"></span></div>
               <p>We present PacketMill, a system for optimizing software packet processing, which (i) introduces a new model to efficiently manage packet metadata and (ii) employs code-optimization techniques to better utilize commodity hardware. PacketMill grinds the whole packet processing stack, from the high-level network function configuration file to the low-level userspace network (specifically DPDK) drivers, to mitigate inefficiencies and produce a customized binary for a given network function. Our evaluation results show that PacketMill increases throughput (up to 36.4 Gbps - 70%) & reduces latency (up to 101us - 28%) and enables nontrivial packet processing (e.g., router) at ~100 Gbps, when new packets arrive >10× faster than main memory access times, while using only one processing core.</p>
               <p><a href="docs/packetmill-asplos21-extended_abstract.pdf">Continue Reading...</a></p>
               <!-- <p><a href="docs/packetmill-asplos21.pdf">Continue Reading...</a></p> -->
