--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
           <div class="col-7 text-center  mb-5">
             <h2 class="section-title">Authors</h2>
-            <p class="lead">Who made PacketMill?</p>
+            <p class="lead">Who has made PacketMill?</p>
           </div>
         </div>
        
@@ -397,6 +397,7 @@
                   <!-- <a href="#"><span class="icon-facebook"></span></a> -->
                   <a href="https://people.kth.se/~maguire/" class="p-3"><span class="icon-globe"></span></a>
                   <a href="https://scholar.google.com/citations?user=HJgs_3YAAAAJ&hl=en" class="p-3"><span class="icon-google"></span></a>
+                  <a href="https://www.linkedin.com/in/gerald-q-maguire-jr-6365422/" class="p-3"><span class="icon-linkedin"></span></a>
                   <!-- <a href="#"><span class="icon-instagram"></span></a> -->
                 </div>
               </div>
@@ -416,6 +417,7 @@
                   <!-- <a href="#"><span class="icon-facebook"></span></a> -->
                   <a href="https://people.kth.se/~dejanko/" class="p-3"><span class="icon-globe"></span></a>
                   <a href="https://scholar.google.com/citations?user=LmqhRxkAAAAJ&hl=en" class="p-3"><span class="icon-google"></span></a>
+                  <a href="https://www.linkedin.com/in/dekostic/" class="p-3"><span class="icon-linkedin"></span></a>
                   <!-- <a href="#"><span class="icon-instagram"></span></a> -->
                 </div>
               </div>
