logo positioning + header updated

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
             <div class="row mb-4" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-6 mr-auto">
-                <h1>Make more Optimized Network Functions on Commodity Hardware</h1>
-                <p class="mb-5">PacketMill could improve packet processing by up to 70%.</p>
+                <h1>Optimize Network Functions on Commodity Hardware</h1>
+                <h3 class="mb-5">Improve performance by up to 70%</h3>
                 <div>
                   <a href="docs/packetmill-asplos21-extended_abstract.pdf" class="btn btn-primary mr-2 mb-2"><span class="icon-wrap"><span class="icon-file-pdf-o"></span></span>&nbsp;&nbsp;&nbsp;Read More</a>
                 </div>
