blue color changed to KTH color

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block ml-0 pl-0">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#packetmill-section" class="nav-link">PacketMill</a></li>
-                <li> <a href="#our-team-section" class="nav-link">Authors</a></li>
+                <li> <a href="#author-section" class="nav-link">Authors</a></li>
                 <!-- <li class="has-children">
                   <a href="#our-team-section" class="nav-link">Our Team</a>
                   <ul class="dropdown arrow-top">
@@ -312,7 +312,7 @@
       </div>
     </div> -->
 
-    <div class="site-section" id="our-team-section">
+    <div class="site-section" id="author-section">
       <div class="container">
         <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
           <div class="col-7 text-center  mb-5">
