chart.js height changedd

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
               <div class="col-lg text-center  mb-5">
               <p class="lead">PacketMill achieves a better performance than other packet processing frameworks.</p>
               </div>
-              <canvas id="comparison-result-canvas" style="min-height:250px"  class="table"></canvas>
+              <div class="table-responsive">
+                <canvas id="comparison-result-canvas" style="max-height: 400px; width: auto;" class="table"></canvas>
+              </div>
                <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js'></script>
               <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js'></script>
               <script src="js/plot.utils.js"></script>
