figure color+legend updated

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
           <div class="col-7 text-center  mb-5">
             <h2 class="section-title">Authors</h2>
-            <p class="lead">Who has made PacketMill?</p>
+            <!-- <p class="lead">Who has made PacketMill?</p> -->
           </div>
         </div>
        
