--- a/index.html
+++ b/index.html
@@ -111,8 +111,6 @@
                 <h3 class="mb-5">Improve performance by up to 70%</h3>
                 <div>
                   <a href="docs/packetmill-asplos21-extended_abstract.pdf" class="btn btn-primary mr-2 mb-2"><span class="icon-wrap"><span class="icon-file-pdf-o"></span></span>&nbsp;&nbsp;&nbsp;Read More</a>
-                </div>
-                <div>
                   <a href="https://github.com/aliireza/packetmill" class="btn btn-primary mr-2 mb-2"><span class="icon-wrap"><span class="icon-github"></span></span>&nbsp;&nbsp;&nbsp;Try Now</a>
                 </div>
               </div>
@@ -129,7 +127,7 @@
     <div class="site-section" id="packetmill-section">
       <div class="container">
         <div class="row mb-5 justify-content-center text-center"  data-aos="fade-up">
-          <div class="col-7 text-center  mb-5">
+          <div class="col-md-7 text-center  mb-5">
             <h2 class="section-title">What is PacketMill?</h2>
             <div class="col-lg text-left  mb-5">
             <p class="lead">PacketMill is a system for optimizing software packet processing. It grinds the whole packet processing stack, from the high-level network function configuration file to the low-level userspace network drivers, to mitigate inefficiencies and produce a customized binary for a given network function.</p>
