OpenGraph metadata added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>PacketMill &mdash; Toward per-core 100-Gbps Networking</title>
+    <title>PacketMill &mdash; Toward Per-Core 100-Gbps Networking</title>
     <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:title" content="PacketMill: Toward Per-Core 100-Gbps Networking" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://packetmill.io/" />
+    <meta property="og:image" content="https://github.com/packetmill/packetmill.github.io/raw/main/images/packetmill/packetmill-opengraph-image.png" />
+    <meta property="og:description" content="Optimize Network Functions on Commodity Hardware" />
     
     
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
