--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="PacketMill: Toward Per-Core 100-Gbps Networking" />
     <meta property="og:description" content="Optimize Network Functions on Commodity Hardware" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://packetmill.io/" />
+    <meta property="og:url" content="https://packetmill.github.io/" />
     <meta property="og:image" content="https://github.com/packetmill/packetmill.github.io/raw/main/images/packetmill/packetmill-opengraph-image-square.png" />
     <meta property="og:image:url"  content="https://github.com/packetmill/packetmill.github.io/raw/main/images/packetmill/packetmill-opengraph-image-square.png"  />
     <meta property="twitter:image" content="https://github.com/packetmill/packetmill.github.io/raw/main/images/packetmill/packetmill-opengraph-image-square.png"  />
